:sparkles: Preparação do código para Entrega 1